--- a/css/custom.css
+++ b/css/custom.css
@@ -7,6 +7,11 @@ html, body {
 	width: 100%;
 	overflow: hidden;
 }
+iframe {
+	width: 100%;
+	height: 100%;
+	border: none;
+}
 .topHeader {
 	text-align: center;
 	font-size: 5em;
@@ -52,7 +57,7 @@ html, body {
 .h-four-fifths {
 	height: 1430px;
 }
-.w-full {
+.h-full {
 	height: 1790px;
 }
 
