--- a/userConfig/css/custom.css
+++ b/userConfig/css/custom.css
@@ -28,10 +28,15 @@ html, body {
 	width: 33.23%;
 	height: 300px;
 	text-align: center;
+	z-index: 999;
 }
 .filler {
 	width: 100%;
 	height: 200px;
+}
+button {
+	padding: 0.5em;
+	border-radius: 0;
 }
 .grid {
 	position: relative;
@@ -39,6 +44,7 @@ html, body {
 	font-size: 1.5em;
 	text-align: center;
 	margin: 0 auto;
+	z-index: 0;
 }
 .addBox {
 	float: left;
@@ -57,6 +63,8 @@ html, body {
 .title_s {
 	font-size: 2em;
 	padding: 1em;
+	z-index: 0;
+	margin-top: 100px;
 }
 .module {
 	position: absolute;
